Se corrigieron lo errores en el la validacion de usuarios y se creo el perfil de operador

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -30,7 +30,7 @@
                                     <p:password id ="password" value="#{loginBean.clave}" required="true">
                                         <f:validateRequired />
                                     </p:password> 
-                                    <p:commandButton value="Aceptar" action="#{loginBean.validarLogin()}" ajax="false"/>
+                                    <p:commandButton value="Aceptar" action="#{loginBean.validarLogin(e)}" ajax="false"/>
                                     <div class="error">
                                         <p:messages closable="true" showDetail="true"/>
                                     </div>
