--- a/web/operador/plantillaAdmin.xhtml
+++ b/web/operador/plantillaAdmin.xhtml
@@ -39,34 +39,34 @@
             <h:form id="fmenu">
                 <p:menubar>  
                     <p:submenu label="Proceso" >  
-                        <p:menuitem value="Riesgo" action="/Admin/riesgo" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Procesos" action="/Admin/proceso" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Panorama de Riesgos" action="/Admin/panorama" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Valoracion" action="/Admin/valoracion" icon="ui-icon-document" ajax="false"/>                           
-                        <p:menuitem value="Mejoramiento" action="/Admin/mejoramiento" icon="ui-icon-document" ajax="false" />                        
+                        <p:menuitem value="Riesgo" action="/operador/riesgo" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Procesos" action="/operador/proceso" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Panorama de Riesgos" action="/operador/panorama" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Valoracion" action="/operador/valoracion" icon="ui-icon-document" ajax="false"/>                           
+                        <p:menuitem value="Mejoramiento" action="/operador/mejoramiento" icon="ui-icon-document" ajax="false" />                        
                     </p:submenu> 
 
                     <p:submenu label="Funcionarios" >  
-                        <p:menuitem value="Funcionario" action="/Admin/funcionario" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Usuario" action="/Admin/usuario" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Perfil" action="/Admin/perfil" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Cargo" action="/Admin/cargo" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Grado" action="/Admin/grado" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Clase" action="/Admin/clase" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Funcionario" action="/operador/funcionario" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Usuario" action="/operador/usuario" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Perfil" action="/operador/perfil" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Cargo" action="/operador/cargo" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Grado" action="/operador/grado" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Clase" action="/operador/clase" icon="ui-icon-document" ajax="false"/>
                     </p:submenu>    
 
                     <p:submenu label="Administrativo" >  
-                        <p:menuitem value="Clasificacion" action="/Admin/Clasificacion" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Enfoque" action="/Admin/Enfoque" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Estado" action="/Admin/Estado" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Nombre Proceso" action="/Admin/NombreProceso" icon="ui-icon-document" ajax="false"/>                        
-                        <p:menuitem value="Tipo Proceso" action="/Admin/TipoProceso" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Area" action="/Admin/Area" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Ciudad" action="/Admin/Ciudad" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Departamento" action="/Admin/Departamento" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Regional" action="/Admin/Regional" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Seccional" action="/Admin/Seccional" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Sub-Area" action="/Admin/Subarea" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Clasificacion" action="/operador/clasificacion" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Enfoque" action="/operador/enfoque" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Estado" action="/operador/estado" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Nombre Proceso" action="/operador/nombreProceso" icon="ui-icon-document" ajax="false"/>                        
+                        <p:menuitem value="Tipo Proceso" action="/operador/tipoProceso" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Area" action="/operador/area" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Ciudad" action="/operador/ciudad" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Departamento" action="/operador/departamento" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Regional" action="/operador/regional" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Seccional" action="/operador/seccional" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Sub-Area" action="/operador/subarea" icon="ui-icon-document" ajax="false"/>
                     </p:submenu>
 
                     <p:submenu label="Reportes">
