--- a/web/operador/plantillaAdmin.xhtml
+++ b/web/operador/plantillaAdmin.xhtml
@@ -56,17 +56,17 @@
                     </p:submenu>    
 
                     <p:submenu label="Administrativo" >  
-                        <p:menuitem value="Clasificacion" action="/operador/clasificacion" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Enfoque" action="/operador/enfoque" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Estado" action="/operador/estado" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Nombre Proceso" action="/operador/nombreProceso" icon="ui-icon-document" ajax="false"/>                        
-                        <p:menuitem value="Tipo Proceso" action="/operador/tipoProceso" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Area" action="/operador/area" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Ciudad" action="/operador/ciudad" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Departamento" action="/operador/departamento" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Regional" action="/operador/regional" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Seccional" action="/operador/seccional" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Sub-Area" action="/operador/subarea" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Clasificacion" action="/operador/Clasificacion" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Enfoque" action="/operador/Enfoque" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Estado" action="/operador/Estado" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Nombre Proceso" action="/operador/NombreProceso" icon="ui-icon-document" ajax="false"/>                        
+                        <p:menuitem value="Tipo Proceso" action="/operador/TipoProceso" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Area" action="/operador/Area" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Ciudad" action="/operador/Ciudad" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Departamento" action="/operador/Departamento" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Regional" action="/operador/Regional" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Seccional" action="/operador/Seccional" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Sub-Area" action="/operador/Subarea" icon="ui-icon-document" ajax="false"/>
                     </p:submenu>
 
                     <p:submenu label="Reportes">
