--- a/web/operador/clase.xhtml
+++ b/web/operador/clase.xhtml
@@ -9,55 +9,60 @@
     <body>
 
         <ui:composition template="./plantillaAdmin.xhtml">
-
             <ui:define name="content">
                 <f:view>
-                    <h1><h:outputText value="Agregar Cargo" /></h1>
-                    <h:form>                
+                    <h1><h:outputText value="Clase" /></h1>
+
+                    <h:form>           
                         <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
                             <p:panelGrid columns="2" style="width: 400px">
-                                <h:outputLabel value="Nombre del Cargo *" />
-                                <p:inputText id="nombre" value="#{cargoBean.nombre}" required="true" label="Cargo">
+                                <h:outputLabel value="Nombre de la clase: *" />
+                                <p:inputText id="nombre" value="#{claseBean.nombre}" required="true" label="Clase">
                                     <f:validateLength minimum="2"/>
                                 </p:inputText>
                                 <h:outputLabel value="Los campos con * son obligatorios"  style="font-style: italic; color: #045491"/>
-                                <p:commandButton action="#{cargoBean.agregar()}" value="Agregar" update="cargoList" ajax="false"/>             
+                                <p:commandButton action="#{claseBean.agregar()}" value="Agregar" update="claseList" ajax="false"/>             
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:menubar style="height: 26px; padding-right: 1%">
-                            <p:menuitem id="agregar" value="Agregar Cargo" update=""  immediate="true" icon="ui-icon-gear"/>
-                            <p:menuitem value="Actualizar" update="cargoList" icon="ui-icon-arrowrefresh-1-w" ajax="false"/> 
+                            <p:menuitem id="agregar" value="Agregar Clase" update=""  immediate="true" icon="ui-icon-gear"/> 
+                            <p:menuitem value="Actualizar" update="claseList" icon="ui-icon-arrowrefresh-1-w" ajax="false"/> 
                         </p:menubar>   
-                        <p:messages for="nombre" closable="true" showSummary="true"/> 
-                        <p:dataTable var="car" value="#{cargoBean.cargoListado()}" id="cargoList" editable="true" 
-                                     style="width: 600px" scrollHeight="100">  
+                        <p:messages closable="true" showSummary="true"/> 
+
+                        <p:dataTable var="cla" value="#{claseBean.claseLista()}" id="claseList" editable="true" style="width: 500px" 
+                                     scrollHeight="300">  
                             <p:menubar />
                             <f:facet name="header">  
-                                Listado de Cargos
+                                Listado de Clases
                             </f:facet>  
 
-                            <p:ajax event="rowEdit" listener="#{cargoBean.modificar}" />
+                            <p:ajax event="rowEdit" listener="#{claseBean.modificar}" />
 
                             <p:column headerText="Codigo" style="width:50px">  
-                                <h:outputText value="#{car.idcargo}" />  
+                                <h:outputText value="#{cla.idclase}" />  
                             </p:column>  
 
                             <p:column headerText="Nombre" >  
                                 <p:cellEditor>  
                                     <f:facet name="output">  
-                                        <h:outputText value="#{car.desccargo}" />  
+                                        <h:outputText value="#{cla.descclase}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{car.desccargo}" />  
+                                        <p:inputText value="#{cla.descclase}" />  
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Editar" style="width:20px" >  
+                            <p:column headerText="Modificar" style="width:20px" >  
                                 <p:rowEditor/>  
                             </p:column>  
                         </p:dataTable>
                     </h:form>
                 </f:view>
+            </ui:define>
+
+            <ui:define name="bottom">
+                bottom
             </ui:define>
 
         </ui:composition>
