--- a/web/Admin/mejoramiento.xhtml
+++ b/web/Admin/mejoramiento.xhtml
@@ -17,7 +17,7 @@
                     <br/>
                     <h:form>   
                         <p:menubar style="height: 26px; padding-right: 1%">
-                            <p:menuitem id="agregar" value="Agregar Mejoramiento" update=""  immediate="true" icon="ui-icon-gear"/> 
+                            <p:menuitem id="agregar" value="Agregar Mejoramiento" update=""  immediate="true" icon="ui-icon-gear" rendered="#{mejoramientoBean.visual}"/> 
                             <p:menuitem value="Actualizar" update="mejoramientoList" icon="ui-icon-arrowrefresh-1-w" immediate="true" ajax="false"/> 
                         </p:menubar> 
 
