Correccion auto incremento base de datos clases

--- a/web/Admin/plantillaAdmin.xhtml
+++ b/web/Admin/plantillaAdmin.xhtml
@@ -56,17 +56,17 @@
                     </p:submenu>    
 
                     <p:submenu label="Administrativo" >  
-                        <p:menuitem value="Clasificacion" action="/Admin/Clasificacion" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Enfoque" action="/Admin/Enfoque" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Estado" action="/Admin/Estado" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Nombre Proceso" action="/Admin/NombreProceso" icon="ui-icon-document" ajax="false"/>                        
-                        <p:menuitem value="Tipo Proceso" action="/Admin/TipoProceso" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Area" action="/Admin/Area" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Ciudad" action="/Admin/Ciudad" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Departamento" action="/Admin/Departamento" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Regional" action="/Admin/Regional" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Seccional" action="/Admin/Seccional" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Sub-Area" action="/Admin/Subarea" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Clasificacion" action="/Admin/clasificacion" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Enfoque" action="/Admin/enfoque" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Estado" action="/Admin/estado" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Nombre Proceso" action="/Admin/nombreProceso" icon="ui-icon-document" ajax="false"/>                        
+                        <p:menuitem value="Tipo Proceso" action="/Admin/tipoProceso" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Area" action="/Admin/area" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Ciudad" action="/Admin/ciudad" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Departamento" action="/Admin/departamento" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Regional" action="/Admin/regional" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Seccional" action="/Admin/seccional" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Sub-Area" action="/Admin/subarea" icon="ui-icon-document" ajax="false"/>
                     </p:submenu>
 
                     <p:submenu label="Reportes">
