--- a/web/Admin/departamento.xhtml
+++ b/web/Admin/departamento.xhtml
@@ -24,24 +24,24 @@
                         <p:overlayPanel for="agregar">
                             <p:panelGrid columns="2">
                                 <h:outputLabel value="Nombre del Departamento *" />
-                                <p:inputText id="nombre" value="#{departamentoBean.nombre}" required="true" label="nombre"/>
+                                <p:inputText id="nombre" value="#{departamentoBean.descdepartamento}" required="true" label="nombre"/>
                                 <h:outputLabel value="Codigo del Departamento *" />
-                                <p:inputText id="codigo" value="#{departamentoBean.codigo}" required="true" label="codigo" maxlength="3"/>
+                                <p:inputText id="codigo" value="#{departamentoBean.codigodepartamento}" required="true" label="codigo" maxlength="3"/>
                                 <p:commandButton  value="Agregar" actionListener="#{departamentoBean.agregar()}" update="departaList" ajax="false" style="background: white"/>
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:messages closable="true" showDetail="true"/>
-                        <p:dataTable var="depar" value="#{departamentoBean.departamentoList()}" id="departaList" 
+                        <p:dataTable var="depar" value="#{departamentoBean.listado()}" id="departaList" 
                                      editable="true" style="width: 600px" scrollable="true" scrollHeight="400">  
                             <p:menubar />
                             <f:facet name="header">  
                                 Listado de Areas
                             </f:facet>  
 
-                            <p:ajax event="rowEdit" listener="#{departamentoBean.modificar}" />
+                            <p:ajax event="rowEdit" listener="#{departamentoBean.actualizar}" />
 
                             <p:column headerText="Codigo" style="width:50px">  
-                                <h:outputText value="#{depar.codigoregional}" />  
+                                <h:outputText value="#{depar.codigodepartamento}" />  
                             </p:column>  
 
                             <p:column headerText="Nombre" >  
@@ -50,7 +50,7 @@
                                         <h:outputText value="#{depar.descdepartamento}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{depar.descdepartamento}" />  
+                                        <p:inputText value="#{departamentoBean.descdepartamento}" />  
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
