--- a/web/Admin/enfoque.xhtml
+++ b/web/Admin/enfoque.xhtml
@@ -37,7 +37,7 @@
                                 Listado de Enfoques
                             </f:facet>  
 
-                            <p:ajax event="rowEdit" listener="#{enfoqueBean.modificar}" />
+                            <p:ajax event="rowEdit" listener="#{enfoqueBean.actualizar}" />
 
                             <p:column headerText="Codigo" style="width:50px">  
                                 <h:outputText value="#{enfo.idenfoque}" />  
@@ -49,7 +49,7 @@
                                         <h:outputText value="#{enfo.descenfoque}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{enfo.descenfoque}" />  
+                                        <p:inputText value="#{enfoqueBean.descenfoque}" />  
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
