--- a/web/Admin/nombreProceso.xhtml
+++ b/web/Admin/nombreProceso.xhtml
@@ -18,17 +18,17 @@
                         <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
                             <p:panelGrid columns="2" style="width: 400px">
                                 <h:outputLabel value="Nombre del Nombre de Proceso *" />
-                                <p:inputText id="nombre" value="#{nombreProcesoBean.nombre}" required="true" label="nombre">
+                                <p:inputText id="nombre" value="#{nombreprocesoBean.descnombre}" required="true" label="nombre">
                                     <f:validateLength minimum="2"/>
                                 </p:inputText>
                                 <h:outputLabel value="Seleccione el Tipo de Proceso *" />
-                                <p:selectOneMenu value="#{nombreProcesoBean.idtipopro}">
+                                <p:selectOneMenu value="#{nombreprocesoBean.tipoproceso}">
                                     <f:selectItem itemLabel="Selecciones el tipo" noSelectionOption="true"/>
-                                    <f:selectItems value="#{nombreProcesoBean.tipoProList()}" var="tipo"
+                                    <f:selectItems value="#{nombreprocesoBean.tipoprocesoListado()}" var="tipo"
                                                    itemLabel="#{tipo.desctipo}" itemValue="#{tipo.idtipoproceso}"/>
                                 </p:selectOneMenu>
                                 <h:outputLabel value="Los campos con * son obligatorios"  style="font-style: italic; color: #045491"/>
-                                <p:commandButton action="#{nombreProcesoBean.agregar()}" value="Agregar" update="nombreList" ajax="false"/>
+                                <p:commandButton action="#{nombreprocesoBean.agregar()}" value="Agregar" update="nombreList" ajax="false"/>
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:menubar style="height: 26px; padding-right: 1%">
@@ -37,13 +37,13 @@
                         </p:menubar>   
                         <p:messages closable="true" showDetail="true"/> 
 
-                        <p:dataTable var="nombre" value="#{nombreProcesoBean.nombreProList()}" id="nombreList" editable="true" style="width: 600px">  
+                        <p:dataTable var="nombre" value="#{nombreprocesoBean.listado()}" id="nombreList" editable="true" style="width: 600px">  
 
                             <f:facet name="header">  
                                 Listado de Nombres de Proceso
                             </f:facet>  
 
-                            <p:ajax event="rowEdit" listener="#{nombreProcesoBean.modificar}" />
+                            <p:ajax event="rowEdit" listener="#{nombreprocesoBean.actualizar}" />
 
                             <p:column headerText="Codigo" style="width:50px">  
                                 <h:outputText value="#{nombre.idnombreproceso}" />  
@@ -55,7 +55,7 @@
                                         <h:outputText value="#{nombre.descnombre}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{nombre.descnombre}" />  
+                                        <p:inputText value="#{nombreprocesoBean.descnombre}" />  
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
