--- a/web/Admin/regional.xhtml
+++ b/web/Admin/regional.xhtml
@@ -22,22 +22,27 @@
                         </p:menubar>
                         <p:overlayPanel for="agregar">
                             <p:panelGrid columns="2">
+                                <h:outputLabel value="Codigo de la Regional" />
+                                <p:inputText id="codigo" value="#{regionalBean.codigoregional}" required="true" label="codigo"/>
                                 <h:outputLabel value="Nombre de la Regional" />
-                                <p:inputText id="nombre" value="#{regionalBean.nombre}" required="true" label="nombre"/>
+                                <p:inputText id="nombre" value="#{regionalBean.descregional}" required="true" label="nombre"/>
                                 <p:commandButton action="#{regionalBean.agregar()}" value="Agregar" style="background: white" update="regionalList" ajax="false"/>
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:messages id="messages" showDetail="true" closable="true" />
-                        <p:dataTable id="regionalList" var="reg" value="#{regionalBean.listadoRegional()}"  
-                                     style="width: 600px">
+                        <p:dataTable id="regionalList" var="reg" value="#{regionalBean.listado()}"  
+                                     style="width: 700px">
                             <f:facet name="header">  
                                 Listado de Regionales
                             </f:facet>  
 
-                            <p:ajax event="rowEdit" listener="#{regionalBean.modificar()}" />
+                            <p:ajax event="rowEdit" listener="#{regionalBean.actualizar}" />
 
-                            <p:column headerText="Codigo" style="width:50px">  
+                            <p:column headerText="ID" style="width:50px">  
                                 <h:outputText value="#{reg.idregional}" />  
+                            </p:column>  
+                            <p:column headerText="Codigo" style="width:200px">  
+                                <h:outputText value="#{reg.codigoregional}" />  
                             </p:column>  
                             <p:messages closable="true" showDetail="true"/>
                             <p:column headerText="Nombre" >  
@@ -46,11 +51,11 @@
                                         <h:outputText value="#{reg.descregional}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{reg.descregional}" />  
+                                        <p:inputText value="#{regionalBean.descregional}" />  
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Modificar" style="width:20px">  
+                            <p:column headerText="Modificar" style="width:40px">  
                                 <p:rowEditor/>  
                             </p:column> 
                         </p:dataTable>
