--- a/web/Admin/seccional.xhtml
+++ b/web/Admin/seccional.xhtml
@@ -25,23 +25,23 @@
                         <p:overlayPanel for="agregar">
                             <p:panelGrid columns="2">
                                 <h:outputLabel value="Nombre de la Seccional" />
-                                <p:inputText value="#{seccionalBean.nombre}"/>
+                                <p:inputText value="#{seccionalBean.descseccional}"/>
                                 <h:outputLabel value="Seleccione la regional" />
-                                <p:selectOneMenu value="#{seccionalBean.idregional}" style="width: 180px">
-                                    <f:selectItems value="#{seccionalBean.regionallist}" var="r"
+                                <p:selectOneMenu value="#{seccionalBean.regional}" style="width: 180px">
+                                    <f:selectItems value="#{seccionalBean.regionalListado()}" var="r"
                                                    itemLabel="#{r.descregional}" itemValue="#{r.idregional}" />
                                 </p:selectOneMenu>
                                 <p:commandButton action="#{seccionalBean.agregar()}" value="Agregar" style="background: white"/>
                             </p:panelGrid>
                         </p:overlayPanel>
 
-                        <p:dataTable id="listadoSeccional" var="sec" value="#{seccionalBean.seccionallist}" scrollable="true"
+                        <p:dataTable id="listadoSeccional" var="sec" value="#{seccionalBean.listado()}" scrollable="true"
                                      scrollHeight="400" style="width: 600px" editable="true">
                             <f:facet name="header">  
                                 Listado de Seccionales
                             </f:facet>  
 
-                            <p:ajax event="rowEdit" listener="#{seccionalBean.modificar()}" />
+                            <p:ajax event="rowEdit" listener="#{seccionalBean.actualizar}" />
 
                             <p:column headerText="Codigo" style="width:50px">  
                                 <h:outputText value="#{sec.idseccional}" />  
@@ -57,7 +57,7 @@
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Modificar" style="width:20px" rendered="#{seccionalBean.modificar()}" >  
+                            <p:column headerText="Modificar" style="width:50px" >  
                                 <p:rowEditor/>  
                             </p:column>  
                         </p:dataTable>
