--- a/web/ejecutor de proceso/proceso.xhtml
+++ b/web/ejecutor de proceso/proceso.xhtml
@@ -16,7 +16,7 @@
                     <h1><h:outputText value="Procesos" /></h1>
 
                     <h:form>  
-                        <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
+                        <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar" rendered="#{procesoBean.adicionar}">
                             <p:panelGrid columns="2" style="width: 600px">
                                 <h:outputLabel value="Tipo de Proceso" />
                                 <p:selectOneMenu id="tipo" value="#{procesoBean.tipoproceso}" 
@@ -171,7 +171,7 @@
                                 <h:outputText value="#{pro.modificado}" />  
                             </p:column>  
 
-                            <p:column headerText="Editar" width="25">  
+                            <p:column headerText="Editar" width="25" rendered="#{procesoBean.modificar}">  
                                 <p:rowEditor />  
                             </p:column>  
 
